--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
         <section id="progs">
             <div class="container">
                 <div class="adobe">
-                    <img src="./assets/adobe/Adobe.png" alt="">
-                    <img src="./assets/adobe/Adobe-1.png" alt="">
-                    <img src="./assets/adobe/Adobe-2.png" alt="">
-                    <img src="./assets/adobe/Adobe-3.png" alt="">
-                    <img src="./assets/adobe/Adobe-4.png" alt="">
+                    <img src="./src/assets/adobe/Adobe.png" alt="">
+                    <img src="./src/assets/adobe/Adobe-1.png" alt="">
+                    <img src="./src/assets/adobe/Adobe-2.png" alt="">
+                    <img src="./src/assets/adobe/Adobe-3.png" alt="">
+                    <img src="./src/assets/adobe/Adobe-4.png" alt="">
                 </div>
                 <div class="prog_dialog">
                     <h2>Programmes</h2>
@@ -250,15 +250,15 @@
                         </div>
                         <div class="footer_links">
                             <a href="#">
-                                <img src="./assets/Icon/Email.png" alt="">
+                                <img src="./src/assets/Icon/Email.png" alt="">
                                 hello@society.com
                             </a>
                             <a href="#">
-                                <img src="./assets/Icon/Phone.png" alt="">
+                                <img src="./src/assets/Icon/Phone.png" alt="">
                                 +233 514 859 659
                             </a>
                             <a href="#">
-                                <img src="./assets/Icon/Pin.png" alt="">
+                                <img src="./src/assets/Icon/Pin.png" alt="">
                                 Winneba, North Campus
                             </a>
                         </div>
