--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 </div>
                 <div class="school_tag">
                     <p>©2022, All Right Reserved <br> Created by Kelvin's tudio</p>
-                    <img src="./assets/school-tag.png" alt="">
+                    <img src="./src/assets/school-tag.png" alt="">
                 </div>
 
             </div>
