--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <main>
+    <main id="main-container">
         <nav id="nav">
             <div class="container">
                 <div class="nav-container">
