its looking good
i gues

--- a/index.html
+++ b/index.html
@@ -61,6 +61,29 @@
                 </div>
             </div>
         </div>
+        <div id="sign_up" class="sign-up">
+            <div class="b-signup container">
+                <div class="sign_container container">
+                    <div class="sign-up-cont">
+                        <div>
+                            <h2>Sign Up</h2>
+                            <p>Sign in with your name and Index number</p>
+                        </div>
+                        <form>
+                            <input type="text" placeholder="Name">
+                            <input type="password" placeholder="Index number">
+                            <button class="cta2">Sign Up</button>
+                        </form>
+                        <div class="guest">
+                            <p>Dont have an Index number?</p>
+                            <button>Join as Guest</button>
+                            <p>Already have an account? <a href="#">Log In</a></p>
+                        </div>
+                    </div>
+                    <div class="signup-image"></div>
+                </div>
+            </div>
+        </div>
         <section id="hero">
             <div class="container">
                 <div class="hero_center">
