--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam id repellendus odio beatae
                         tenetur eveniet hic vitae quo excepturi tempora!</p>
                     <a href="#studio">
-                        <div class="cta_nav">
+                        <div class="cta_nav hero_cta">
                             <div class="cta_nav_inner">
                                 <span>Explore</span>
                                 <span class="down_c">Explore</span>
@@ -127,31 +127,32 @@
                     <div class="about_context">
                         <div class="context">
                             <div class="a_headline">
-                                <h2>Department <span>of</span></h2>
+                                <h2>Department <span><svg width="54" height="64" viewBox="0 0 54 64" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M22.5429 22.0182C23.1461 22.0182 23.7593 22.2897 24.3826 22.8325C25.026 23.3754 25.3477 24.2098 25.3477 25.3358C25.3477 26.4417 24.9557 27.8893 24.1715 29.6788C23.3874 31.4482 22.3117 33.2578 20.9444 35.1076C19.5772 36.9373 18.0692 38.6664 16.4204 40.2951C14.7918 41.9036 13.0224 43.2306 11.1123 44.2762C9.2223 45.3016 7.50319 45.8143 5.95498 45.8143C4.40678 45.8143 3.16017 45.3318 2.21517 44.3666C1.29026 43.3814 0.827814 42.0242 0.827814 40.2951C0.827814 38.5458 1.25005 36.6156 2.09453 34.5044C2.95911 32.3932 4.06497 30.5333 5.41211 28.9248C6.75925 27.2962 8.21697 25.8385 9.78528 24.5516C13.0626 21.9177 15.9379 20.6007 18.411 20.6007C19.5169 20.6007 20.3513 20.8721 20.9143 21.415C21.1153 21.596 21.2159 21.7568 21.2159 21.8976V22.0785C21.4973 22.0383 21.9397 22.0182 22.5429 22.0182ZM19.4967 26.0295H19.2856C18.5819 26.0295 18.23 25.5168 18.23 24.4913C16.7623 24.9739 15.2241 25.8184 13.6156 27.0247C12.0071 28.2311 10.5694 29.6587 9.30272 31.3074C6.72909 34.6049 5.42216 37.3897 5.38195 39.6617C5.38195 40.7877 5.79413 41.3507 6.6185 41.3507C7.44287 41.3507 8.66937 40.8078 10.298 39.722C11.9266 38.6363 13.5352 37.0881 15.1236 35.0774C16.7321 33.0668 17.9284 31.3275 18.7126 29.8598C19.5169 28.3719 19.919 27.3666 19.919 26.8438C19.919 26.3009 19.7782 26.0295 19.4967 26.0295ZM22.9953 35.2885L22.754 34.4441C22.754 34.2832 22.8344 34.1525 22.9953 34.052C23.1561 33.9313 23.3572 33.7001 23.5985 33.3583C23.8599 33.0165 24.0408 32.7953 24.1414 32.6948C24.262 32.5943 24.4228 32.4535 24.6239 32.2726C24.8451 32.0715 25.026 31.9106 25.1668 31.79C25.5689 31.4482 25.8504 31.2572 26.0113 31.217C26.1721 31.1566 26.4536 31.0662 26.8557 30.9455C28.1023 30.5434 29.1579 30.2619 30.0225 30.101C35.1497 21.5357 39.2615 14.8402 42.3579 10.0146C45.4744 5.16893 47.2438 2.49476 47.666 1.99209C48.1084 1.46932 48.8825 1.00687 49.9883 0.604742C51.0942 0.202611 51.8984 0.0115992 52.4011 0.0317058C52.9239 0.0317058 53.1853 0.252878 53.1853 0.695222C53.1853 0.876181 53.1149 1.11746 52.9741 1.41906C52.8535 1.72066 51.7577 3.50009 49.6867 6.75735C42.0261 18.761 37.1201 26.5422 34.9687 30.101L35.7227 30.3725C40.3874 29.5079 42.8103 29.0756 42.9912 29.0756C43.1923 29.0756 43.6749 29.2164 44.4389 29.4979C45.2231 29.7592 45.7358 29.91 45.9771 29.9502C46.4395 30.0307 46.6707 30.4127 46.6707 31.0963C46.6707 31.7598 46.4596 32.1318 46.0374 32.2122C45.6956 32.2726 44.8712 32.4736 43.5643 32.8154C42.2775 33.1371 41.242 33.3885 40.4578 33.5694C41.5235 34.8361 42.0563 36.1833 42.0563 37.6108C42.0563 39.0384 41.4229 40.9284 40.1562 43.2809C38.8895 45.6132 37.2709 47.9255 35.3005 50.2176C33.33 52.5098 31.2591 54.6712 29.0876 56.702C26.9362 58.7328 24.8652 60.3715 22.8746 61.6181C20.8841 62.8848 19.4163 63.5181 18.4713 63.5181C17.5062 63.5181 16.6517 63.2567 15.9077 62.734C15.1437 62.2313 14.7617 61.4773 14.7617 60.472C14.7617 59.4667 14.9728 58.2904 15.395 56.9433C15.7971 55.6163 16.2395 54.3898 16.722 53.2638C17.2046 52.1579 18.029 50.5595 19.1951 48.4684C20.4418 46.2164 22.6937 42.366 25.9509 36.9172C25.388 37.0177 24.9557 37.068 24.6541 37.068C24.3525 37.068 24.071 36.9976 23.8096 36.8568C23.5482 36.7161 23.3673 36.5351 23.2667 36.314C23.0858 35.9118 22.9953 35.57 22.9953 35.2885ZM31.4702 48.2874C32.9782 46.5382 34.2449 44.7085 35.2703 42.7983C36.2958 40.8681 36.8085 39.2998 36.8085 38.0934C36.8085 36.8669 36.2153 35.7912 35.0291 34.8663L31.6813 35.6203C31.3395 36.1833 30.8067 37.078 30.0828 38.3045C29.3791 39.5109 28.796 40.4961 28.3336 41.2602C27.8912 42.0242 27.3182 43.0095 26.6145 44.2158C25.9107 45.4222 25.3176 46.4376 24.835 47.262C24.3726 48.0864 23.8498 49.0113 23.2667 50.0367C22.7037 51.0822 22.2413 51.9669 21.8794 52.6908C21.4973 53.4347 21.1354 54.1686 20.7936 54.8924C20.1301 56.2999 19.7983 57.2147 19.7983 57.637C19.7983 58.0592 19.9089 58.2703 20.1301 58.2703C20.5322 58.2703 21.3667 57.8079 22.6334 56.883C23.88 55.9782 25.2874 54.7517 26.8557 53.2035C28.4442 51.6754 29.9823 50.0367 31.4702 48.2874Z"
+                                                fill="#FFF004" />
+                                        </svg>
+                                    </span></h2>
                                 <h1>Graphic <span> Design</span></h1>
                             </div>
                             <h2>About the Department</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur. Elementum a quis scelerisque morbi blandit.
-                                Augue
-                                accumsan
-                                sit vivamus elit sagittis netus sed quam. Orci neque Lorem ipsum dolor sit amet
-                                consectetur.
-                                Elementum a quis scelerisque morbi blandit. Augue accumsan sit vivamus elit sagittis
-                                netus
-                                sed
-                                quam.
-                                Orci neque Lorem ipsum dolor sit amet consectetur. Elementum a quis scelerisque
-                                morbi
-                                blandit.
-                                Augue
-                                accumsan sit vivamus elit sagittis netus sed quam. Orci neque
+                                The Department of Graphic Design (DGD) at the University of Education, Winneba in Ghana
+                                is well positioned to deliver effectively on its mandated duties. Organized by the
+                                effective leadership of previous heads, the Department has not relented in its efforts
+                                towards the development of a creativity-driven community of students and staff committed
+                                to the active interrelationship of thoughts, procedures and praxis.
+
+                                The DGD remains resolute in the conviction that training students in the beneficial
+                                engagement of their creative sensibilities, intuitive perceptions, feelings, experiences
+                                and imaginations, is necessary for our collective efforts towards growth and
+                                development.
                                 <br><br>
-                                Augue accumsan sit vivamus elit sagittis netus sed quam. Orci neque Lorem ipsum
-                                dolor
-                                sit
-                                amet
-                                consectetur. Elementum a quis
+                                The programme aims to provide opportunity for the study of an internationally recognized
+                                bachelor of arts programme in theory and practice of Graphic Design; develop appropriate
+                                research skills; and provide opportunity for producing a sustained body of creative
+                                graphic design works for industrial and educational development.
                             </p>
                             <button class="cta2"> Visit school page <img class="btn_arrow" src="./src/assets/point.png"
                                     alt=""></button>
@@ -178,59 +179,55 @@
                 </div>
                 <div class="prog_dialog">
                     <h2>Programmes</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur. Elementum a quis scelerisque morbi blandit. Augue
-                        accumsan
-                        sit
-                        vivamus elit sagittis netus sed quam. Orci neque Lorem ipsum dolor sit amet consectetur.
-                        Elementum a
-                        quis scelerisque morbi blandit.</p>
+                    <p>We offer a variesty of course related to graphic design and other design related courses. Join
+                        our growing campus as we change the design industry and how design is viewed in general.</p>
                     <button class="cta2"> Enroll now <img class="btn_arrow" src="./src/assets/point.png"
                             alt=""></button>
                 </div>
                 <div class="progs_cards">
                     <div class="pc_slide">
                         <div class="card">
-                            <div>
+                            <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>BA inGraphic Design</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
                                         voluptas.
                                     </p>
                                 </div>
-                                <button class="card_cta">Read more <img src="./src/assets/point.png" alt=""></button>
+                                <button class="card_cta">Read more</button>
                             </div>
                         </div>
                         <div class="card">
-                            <div>
+                            <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>Diploma in Design</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
                                         voluptas.
                                     </p>
                                 </div>
-                                <button class="card_cta">Read more <img src="./src/assets/point.png" alt=""></button>
+                                <button class="card_cta">Read more</button>
                             </div>
                         </div>
                         <div class="card">
-                            <div>
+                            <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>MPhil in Design</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
                                         voluptas.
                                     </p>
                                 </div>
-                                <button class="card_cta">Read more <img src="./src/assets/point.png" alt=""></button>
+                                <button class="card_cta">Read more</button>
                             </div>
                         </div>
                         <div class="card">
-                            <div>
+                            <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>Masters</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
                                         voluptas.
                                     </p>
                                 </div>
-                                <button class="card_cta">Read more <img src="./src/assets/point.png" alt=""></button>
+                                <button class="card_cta">Read more</button>
                             </div>
                         </div>
                     </div>
@@ -249,16 +246,13 @@
                 <div class="s__container">
                     <div class="s__inner">
                         <div class="name">
-                            <h1 class="name_text1">3d world</h1>
-                            <h1 class="name_text2">Design</h1>
-                            <h1 class="name_text3">Photography</h1>
-                            <h1 class="name_text4">Other Creative</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/img1.jpg">3d world</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/img2.jpg">Design</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/img3.jpg">Photography</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/img1.jpg">Other Creative</h1>
                         </div>
                         <div class="display_image">
                             <div class="the_image1 the_image"></div>
-                            <div class="the_image2 the_image"></div>
-                            <div class="the_image3 the_image"></div>
-                            <div class="the_image4 the_image"></div>
                             <!-- <img src="./assets/images/img2.jpg" alt=""> -->
                         </div>
                     </div>
