--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
             <div class="container">
                 <div class="hero_center">
                     <h1 class="hero_text">We Create <br> to Inspire</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam id repellendus odio beatae
-                        tenetur eveniet hic vitae quo excepturi tempora!</p>
+                    <p>Welcome to the Dpartment of Graphic Design Design Society</p>
                     <a href="#studio">
                         <div class="cta_nav hero_cta">
                             <div class="cta_nav_inner">
