--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./src/assets/fav-ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
@@ -101,8 +102,13 @@
             <div class="container">
                 <img src="./src/assets/images/nice1.png" alt="" class="hero-bounce">
                 <div class="hero_center">
-                    <h1 class="hero_text"><span class="w">We</span> <span class="c">Create</span> <br> <span clas>to
-                            Inspire</span></h1>
+                    <div>
+                        <h1 class="hero_text">
+                            <span class="we">We</span>
+                            <span class="we">Create</span>
+                            <span class="we">to Inspire</span>
+                        </h1>
+                    </div>
                     <p>Welcome to the Dpartment of Graphic Design Design Society</p>
                     <a href="#studio">
                         <div class="cta_nav hero_cta">
@@ -301,7 +307,8 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <div class="lay">
+            <h1>Anticipate</h1>
+            <!-- <div class="lay">
                 <form class="form_cont">
                     <textarea name="" id="" placeholder="Suggestion box"></textarea>
                     <button class="cta2">Submit<img class="btn_arrow" src="./src/assets/point.png" alt=""></button>
@@ -327,7 +334,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="school_tag">
                 <p>©2022, All Right Reserved <br> Created by Kelvin's tudio</p>
                 <img src="./src/assets/school-tag.png" alt="">
