--- a/index.html
+++ b/index.html
@@ -27,26 +27,27 @@
                         <span class="lash_"></span>
                     </div>
                     <div class="eyes">
-                        <svg width="86" height="44" viewBox="0 0 86 44" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <rect x="0.477539" width="85" height="44" fill="#FFF004" />
+                        <svg class="eyeball" width="86" height="44" viewBox="0 0 86 44" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <rect class="eyespace" x="0.477539" width="85" height="44" fill="#FFF004" />
                             <path
                                 d="M38.9775 22C38.9775 26.3206 37.6635 30.2128 35.5628 33.0137C33.4623 35.8144 30.5986 37.5 27.4775 37.5C24.3565 37.5 21.4928 35.8144 19.3923 33.0137C17.2916 30.2128 15.9775 26.3206 15.9775 22C15.9775 17.6794 17.2916 13.7872 19.3923 10.9863C21.4928 8.18557 24.3565 6.5 27.4775 6.5C30.5986 6.5 33.4623 8.18557 35.5628 10.9863C37.6635 13.7872 38.9775 17.6794 38.9775 22Z"
                                 fill="white" stroke="black" />
-                            <ellipse cx="22.4775" cy="26.5" rx="5" ry="6.5" fill="#1F1E01" />
+                            <ellipse class="eye" cx="28.4775" cy="26.5" rx="5" ry="6.5" fill="#1F1E01" />
                             <path
                                 d="M71.9775 22C71.9775 26.3206 70.6635 30.2128 68.5628 33.0137C66.4623 35.8144 63.5986 37.5 60.4775 37.5C57.3565 37.5 54.4928 35.8144 52.3923 33.0137C50.2916 30.2128 48.9775 26.3206 48.9775 22C48.9775 17.6794 50.2916 13.7872 52.3923 10.9863C54.4928 8.18557 57.3565 6.5 60.4775 6.5C63.5986 6.5 66.4623 8.18557 68.5628 10.9863C70.6635 13.7872 71.9775 17.6794 71.9775 22Z"
                                 fill="white" stroke="black" />
-                            <ellipse cx="55.4775" cy="26.5" rx="5" ry="6.5" fill="#1F1E01" />
+                            <ellipse class="eye" cx="60.4775" cy="26.5" rx="5" ry="6.5" fill="#1F1E01" />
                         </svg>
                     </div>
-                    <a href="#">
-                        <div class="cta_nav">
-                            <div class="cta_nav_inner">
-                                <span>Sign In</span>
-                                <span class="down_c">Sign In</span>
-                            </div>
+                    <!-- <a href=""> -->
+                    <div class="cta_nav">
+                        <div class="cta_nav_inner">
+                            <span>Sign In</span>
+                            <span class="down_c">Sign In</span>
                         </div>
-                    </a>
+                    </div>
+                    <!-- </a> -->
                 </div>
             </div>
         </nav>
