i think I am done
what the summary says

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="shortcut icon" href="./src/assets/fav-ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&family=Inter:wght@400;600;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/themes/splide-default.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
@@ -308,7 +310,20 @@
     </main>
     <footer id="footer">
         <div class="container">
-            <h1>Anticipate</h1>
+            <h1 class="anti_cipate">
+                <span class="anti_cipate_span">
+                    <span class="anticipate">A</span>
+                    <span class="anticipate">N</span>
+                    <span class="anticipate">T</span>
+                    <span class="anticipate">I</span>
+                    <span class="anticipate">C</span>
+                    <span class="anticipate">I</span>
+                    <span class="anticipate">P</span>
+                    <span class="anticipate">A</span>
+                    <span class="anticipate">T</span>
+                    <span class="anticipate">E</span>
+                </span>
+            </h1>
             <!-- <div class="lay">
                 <form class="form_cont">
                     <textarea name="" id="" placeholder="Suggestion box"></textarea>
