--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@
                 </div>
                 <div class="hero_bars">
                     <div class="bars_ one_">
+                        <svg class="hero-bounce-other hero-bounceO" width="173" height="172" viewBox="0 0 173 172"
+                            fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <ellipse cx="86.2396" cy="85.92" rx="85.92" ry="85.92" fill="#E20789" />
+                        </svg>
                         <h3>Stay Motivated</h3>
                         <p>Lorem ipsum dolor amet consectetur.a quis scelerisque morbi blandit. Augue
                             accumsan
@@ -136,6 +140,10 @@
                             sit</p>
                     </div>
                     <div class="bars_ three_">
+                        <svg class="hero-bounce-other2 hero-bounceO" width="140" height="59" viewBox="0 0 140 59"
+                            fill="none" xmlns=" hero-bounceOhttp://www.w3.org/2000/svg">
+                            <rect x="0.63623" y="0.0281982" width="139.2" height="58.56" rx="29.28" fill="#FFF004" />
+                        </svg>
                         <h3>Discover new ideas</h3>
                         <p>Lorem ipsum dolor amet consectetur.a quis scelerisque morbi blandit. Augue
                             accumsan
