update links and others
...

--- a/index.html
+++ b/index.html
@@ -221,44 +221,40 @@
                             <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>BA inGraphic Design</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-                                        voluptas.
-                                    </p>
                                 </div>
-                                <button class="card_cta">Read more</button>
+                                <a href="https://uew.edu.gh/admissions" target="_blank">
+                                    <button class="card_cta">Learn more</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-inner">
                                 <div class="progs_cards_inner">
                                     <h3>Diploma in Design</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-                                        voluptas.
-                                    </p>
                                 </div>
-                                <button class="card_cta">Read more</button>
+                                <a href="https://uew.edu.gh/admissions" target="_blank">
+                                    <button class="card_cta">Learn more</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-inner">
                                 <div class="progs_cards_inner">
-                                    <h3>MPhil in Design</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-                                        voluptas.
-                                    </p>
+                                    <h3>MPhil in Graphic Design</h3>
                                 </div>
-                                <button class="card_cta">Read more</button>
+                                <a href="https://uew.edu.gh/admissions" target="_blank">
+                                    <button class="card_cta">Learn more</button>
+                                </a>
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-inner">
                                 <div class="progs_cards_inner">
-                                    <h3>Masters</h3>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae,
-                                        voluptas.
-                                    </p>
+                                    <h3>Masters In Art</h3>
                                 </div>
-                                <button class="card_cta">Read more</button>
+                                <a href="https://uew.edu.gh/admissions" target="_blank">
+                                    <button class="card_cta">Learn more</button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -277,10 +273,10 @@
                 <div class="s__container">
                     <div class="s__inner">
                         <div class="name">
-                            <h1 class="name_text" data-image="/src/assets/images/img1.jpg">3d world</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/img2.jpg">Design</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/img3.jpg">Photography</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/img1.jpg">Other Creative</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/model.png">3d world</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/design.jpg">Design</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/photo.jpg">Photography</h1>
+                            <h1 class="name_text" data-image="/src/assets/images/sign-up-image.jpg">Other Creative</h1>
                         </div>
                         <div class="display_image">
                             <div class="the_image1 the_image"></div>
