--- a/index.html
+++ b/index.html
@@ -212,8 +212,10 @@
                     <h2>What we do</h2>
                     <p>We offer a variesty of course related to graphic design and other design related courses. Join
                         our growing campus as we change the design industry and how design is viewed in general.</p>
-                    <button class="cta2"> Enroll now <img class="btn_arrow" src="./src/assets/point.png"
+                        <a href="https://uew.edu.gh/admissions" target="_blank">
+                            <button class="cta2"> Enroll now <img class="btn_arrow" src="./src/assets/point.png"
                             alt=""></button>
+                    </a>
                 </div>
                 <div class="progs_cards">
                     <div class="pc_slide">
@@ -273,10 +275,10 @@
                 <div class="s__container">
                     <div class="s__inner">
                         <div class="name">
-                            <h1 class="name_text" data-image="/src/assets/images/model.png">3d world</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/design.jpg">Design</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/photo.jpg">Photography</h1>
-                            <h1 class="name_text" data-image="/src/assets/images/sign-up-image.jpg">Other Creative</h1>
+                            <h1 class="name_text alert-btn" data-image="/src/assets/images/model.png">3d world</h1>
+                            <h1 class="name_text alert-btn" data-image="/src/assets/images/design.jpg">Design</h1>
+                            <h1 class="name_text alert-btn" data-image="/src/assets/images/photo.jpg">Photography</h1>
+                            <h1 class="name_text alert-btn" data-image="/src/assets/images/sign-up-image.jpg">Other Creative</h1>
                         </div>
                         <div class="display_image">
                             <div class="the_image1 the_image"></div>
@@ -288,10 +290,18 @@
                 <!-- the main man for mobile -->
                 <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide"></div>
-                        <div class="swiper-slide"></div>
-                        <div class="swiper-slide"></div>
-                        <div class="swiper-slide"></div>
+                        <div class="swiper-slide alert-btn">
+                            <h2>3D world</h2>
+                        </div>
+                        <div class="swiper-slide alert-btn">
+                            <h2>Design</h2>
+                        </div>
+                        <div class="swiper-slide alert-btn">
+                            <h2>Photography</h2>
+                        </div>
+                        <div class="swiper-slide alert-btn">
+                            <h2>Other Creatives</h2>
+                        </div>
                     </div>
                 </div>
 
