--- a/index.html
+++ b/index.html
@@ -129,15 +129,11 @@
                             <ellipse cx="86.2396" cy="85.92" rx="85.92" ry="85.92" fill="#E20789" />
                         </svg>
                         <h3>Stay Motivated</h3>
-                        <p>Lorem ipsum dolor amet consectetur.a quis scelerisque morbi blandit. Augue
-                            accumsan
-                            sit</p>
+                        <p>Join your mates online, to explore new ideas and innovative ways of doing creatives stuffs </p>
                     </div>
                     <div class="bars_ two_">
                         <h3>Bring your ideas to life</h3>
-                        <p>Lorem ipsum dolor amet consectetur.a quis scelerisque morbi blandit. Augue
-                            accumsan
-                            sit</p>
+                        <p>Join your mates online, to explore new ideas and innovative ways of doing creatives stuffs</p>
                     </div>
                     <div class="bars_ three_">
                         <svg class="hero-bounce-other2 hero-bounceO" width="140" height="59" viewBox="0 0 140 59"
@@ -145,9 +141,7 @@
                             <rect x="0.63623" y="0.0281982" width="139.2" height="58.56" rx="29.28" fill="#FFF004" />
                         </svg>
                         <h3>Discover new ideas</h3>
-                        <p>Lorem ipsum dolor amet consectetur.a quis scelerisque morbi blandit. Augue
-                            accumsan
-                            sit</p>
+                        <p>Join your mates online, to explore new ideas and innovative ways of doing creatives stuffs</p>
                     </div>
                 </div>
             </div>
