--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="shortcut icon" href="./src/assets/fav-ico.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
+    <link defer
         href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@600&family=Inter:wght@400;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet"
+    <link defer rel="stylesheet"
         href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/themes/splide-default.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="./src/css/main.css">
@@ -269,7 +269,7 @@
                 <div class="s__container">
                     <div class="s__inner">
                         <div class="name">
-                            <h1 class="name_text alert-btn" data-image="/src/assets/images/model.png">3d world</h1>
+                            <h1 class="name_text alert-btn" data-image="/src/assets/images/model.jpg">3d world</h1>
                             <h1 class="name_text alert-btn" data-image="/src/assets/images/design.jpg">Design</h1>
                             <h1 class="name_text alert-btn" data-image="/src/assets/images/photo.jpg">Photography</h1>
                             <h1 class="name_text alert-btn" data-image="/src/assets/images/sign-up-image.jpg">Other Creative</h1>
